syntax = "proto3";
package pt.ulisboa.tecnico.classes.contract;

// Classes System Definitions

message Student {
  string studentId = 1;
  string studentName = 2;
  Timestamp lastAction = 3;
}

message ClassState {
  int32 capacity = 1;
  bool openEnrollments = 2;
  repeated Student enrolled = 3;
  repeated Student discarded = 4;
}

message EnrollableTimes {
  Timestamp start = 1;
  Timestamp end = 2;
  int32 capacity = 3;
}

message Timestamp {
  // Represents seconds of UTC time since Unix epoch
  // 1970-01-01T00:00:00Z. Must be from 0001-01-01T00:00:00Z to
  // 9999-12-31T23:59:59Z inclusive.
  int64 seconds = 1;

  // Non-negative fractions of a second at nanosecond resolution. Negative
  // second values with fractions must still have non-negative nanos values
  // that count forward in time. Must be from 0 to 999,999,999
  // inclusive.
  int32 nanos = 2;
}

enum ResponseCode {
  OK = 0;
  NON_EXISTING_STUDENT = 1;
  FULL_CLASS = 2;
  STUDENT_ALREADY_ENROLLED = 3;
  ENROLLMENTS_ALREADY_OPENED = 4;
  ENROLLMENTS_ALREADY_CLOSED = 5;
  INACTIVE_SERVER = 6;
  WRITING_NOT_SUPPORTED = 7;
}
